# hfs

./: .gitignore  Cargo.toml  README.md  RELEASING.md  TESTING_PYPI.md  release.toml  todo.txt
.github/workflows/: cd-native.yml  cd.yml  ci.yml  py-cd.yml  py-ci.yml  pysof-ci.yml  testdoc.yml  testtwine.yml
crates/fhir/: Cargo.toml  build.rs
crates/fhir-gen/: Cargo.toml  README.md  build.rs  fix_doc_comments.rs
crates/fhir-gen/resources/R6/: conceptmaps.json  dataelements.json  download_metadata.json  profiles-types.json  search-parameters.json  version.info
crates/fhir-gen/src/: lib.rs
crates/fhir-macro/: Cargo.toml
crates/fhir-macro/src/: lib.rs
crates/fhir/src/: lib.rs  r4.rs  r4b.rs  r5.rs  r6.rs  serde_helpers.rs
crates/fhir/tests/: test_examples.rs  test_serde.rs
crates/fhir/tests/data/R6/: Device-NGS-device.json  Device-Triodenovo-SW.json  Group-denovoFamily.json  RelatedPerson-denovoFather.json  RelatedPerson-denovoMother.json  Requirements-example1.json  account-questionnaire.json  account.profile.json  activitydefinition-administer-zika-virus-exposure-assessment.json  activitydefinition-example-alteplase-dosing.json  activitydefinition-example.json  activitydefinition-medicationorder-example.json  activitydefinition-order-serum-dengue-virus-igm.json  activitydefinition-order-serum-zika-dengue-virus-igm.json  activitydefinition-predecessor-example.json  activitydefinition-provide-mosquito-prevention-advice.json  activitydefinition-questionnaire.json  activitydefinition-servicerequest-example.json  activitydefinition-supplyrequest-example.json  activitydefinition.profile.json  actordefinition-questionnaire.json  actordefinition.profile.json  address.profile.json  administrableproductdefinition-questionnaire.json  administrableproductdefinition.profile.json  adverseevent-questionnaire.json  adverseevent.profile.json  age.profile.json  allergyintolerance-questionnaire.json  allergyintolerance.profile.json  annotation.profile.json  appointment-questionnaire.json  appointment.profile.json  appointmentresponse-questionnaire.json  appointmentresponse.profile.json  artifactassessment-example-justification-for-recommendation.json  artifactassessment-example-risk-of-bias-assessment-of-parachute-trial.json  artifactassessment-questionnaire.json  artifactassessment.profile.json  attachment.profile.json  (+2295 more)
crates/fhirpath/: Cargo.toml  README.md
crates/fhirpath-support/: Cargo.toml
crates/fhirpath-support/src/: lib.rs
crates/fhirpath/src/: boundary_functions.rs  cli.rs  contains_function.rs  datetime_impl.rs  evaluator.rs  handlers.rs  lib.rs  not_function.rs  parser.rs  polymorphic_access.rs  resource_type.rs  trace_function.rs
crates/fhirpath/tests/: all_function_tests.rs  comment_test.rs  define_variable_test.rs  enhanced_variable_tests.rs  evaluator_tests.rs  extension_tests.rs  precision_tests.rs  r4_tests.rs  r5_tests.rs  test_boundary_zero.rs
crates/fhirpath/tests/common/: mod.rs  parser.rs
crates/fhirpath/tests/data/r5/: known-test-failures.json  tests-fhir-r5.xml
crates/hfs/: Cargo.toml
crates/pysof/: .gitignore  Cargo.toml  MULTITHREADING.md  PYPI_CHECKLIST.md  PYTHON_VERSION_EXPANSION.md  README.md  multithreading_example.py  pyproject.toml  test_multithreading.py
crates/pysof/.cargo/: config.toml
crates/pysof/python-tests/: test_content_types.py
crates/pysof/src/: lib.rs
crates/pysof/src/pysof/: __init__.py
crates/pysof/src/pysof_mult/: __init__.py  _pysof_mult.pyi
crates/pysof/tests/: lib_coverage_tests.rs  lib_tests.rs  multithreading_integration.rs  test_content_types.py  test_core_functions.py  test_error_handling.py  test_fhir_versions.py  test_import.py  test_package_metadata.py  threading_test.rs
crates/sof/: Cargo.toml  README.md
crates/sof/benches/: parallel_processing_bench.rs
crates/sof/src/: cli.rs  data_source.rs  error.rs  handlers.rs  lib.rs  models.rs  server.rs  traits.rs
crates/sof/tests/: debug_datetime_instant_constants.rs  debug_datetime_type_info.rs  debug_enum_conversion.rs  debug_instant_constant.rs  debug_instant_type_info.rs  server_tests.rs  sql_on_fhir_tests.rs  test_boolean_constant_debug.rs  test_boolean_constant_debug2.rs  test_boolean_constant_debug3.rs  test_cli_file_source.rs  test_format_parameter_body.rs  test_header_parameter_body.rs  test_limit_parameter_body.rs  test_parallel_working.rs  test_parameter_validation.rs  test_patient_reference_formats.rs  test_query_parameter_combinations.rs  test_run_operation_parameters.rs
crates/sof/tests/common/: mod.rs
utils/: benchmark_serde.sh
