[workspace]
members = ["crates/*"]
exclude = ["crates/pysof"]
resolver = "2"

[workspace.package]
version = "0.1.16"
edition = "2024"
license = "MIT"
authors = ["Helios Software"]
repository = "https://github.com/HeliosSoftware/hfs"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
helios-fhir = { path = "crates/fhir" }
chrono = { version = "0.4", features = ["serde"] }

