[package]
name = "helios-fhir-gen"
version = "0.1.1"
edition = "2024"
description = "The helios-fhir-gen crate is module that serves as the cornerstone for generating Rust code from official FHIR (Fast Healthcare Interoperability Resources) specifications. This tool transforms FHIR StructureDefinitions into Rust types, enabling type-safe interaction with FHIR resources across multiple specification versions."
license = "MIT"
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/fhir-gen"
readme = "README.md"

[features]
default = ["R4"]
R4 = ["helios-fhir/R4"]
R4B = ["helios-fhir/R4B"]
R5 = ["helios-fhir/R5"]
R6 = ["helios-fhir/R6"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
helios-fhir = { path = "../fhir", version = "0.1.2" }
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
serde_json = "1.0"
