[package]
name = "helios-fhirpath-support"
version = "0.1.2"
edition = "2024"
description = "The helios-fhirpath-support crate serves as a bridge module that provides essential types and traits for integration between the FHIRPath evaluator, it's associated functions, and also the FHIR model code in the fhir module, and it's generated code that is created by fhir_macro."
license = "MIT"
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/fhirpath-support"
readme = "README.md"


[dependencies]
rust_decimal = { version = "1.37.1" }
