[package]
name = "helios-fhirpath"
version.workspace = true
edition.workspace = true
description = "This is an implementation of HL7's FHIRPath Specification."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/fhirpath"
readme = "README.md"

[features]
default = ["R4"]
R4 = ["helios-fhir/R4"]
R4B = ["helios-fhir/R4B"]
R5 = ["helios-fhir/R5"]
R6 = ["helios-fhir/R6"]

[dependencies]
helios-fhir = { path = "../fhir", version = "0.1.9" }
helios-fhirpath-support = { path = "../fhirpath-support", version = "0.1.9" }
chumsky = "0.9.3"
roxmltree = "0.19.0"
chrono = { version = "0.4", features = ["serde"] } # For date/time parsing and functions
rust_decimal = { version = "1.35", features = ["serde-with-float", "macros"] }
rust_decimal_macros = "1.35"
regex = "1" # For string matches/replaceMatches functions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0" # For lazy initialization of static values

# CLI and server dependencies
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower = { version = "0.5" }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "17.0"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"

[[bin]]
name = "fhirpath-cli"
path = "src/bin/fhirpath-cli.rs"

[[bin]]
name = "fhirpath-server"
path = "src/bin/fhirpath-server.rs"

[[bench]]
name = "parser_benches"
harness = false

[[bench]]
name = "evaluator_benches"
harness = false

[[bench]]
name = "cli_benches"
harness = false

[[bench]]
name = "server_benches"
harness = false

