[package]
name = "helios-hfs"
version = "0.1.0"
edition = "2024"
description = "The hfs crate is the main server executable for the Helios FHIR Server."
license = "MIT"
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/hfs"
readme = "README.md"

[features]
default = ["R4"]
R4 = ["helios-fhir/R4"]
R4B = ["helios-fhir/R4B"]
R5 = ["helios-fhir/R5"]
R6 = ["helios-fhir/R6"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
helios-fhir = { path = "../fhir", version = "0.1.2" }
