[package]
name = "helios-hfs"
version.workspace = true
edition.workspace = true
description = "The hfs crate is the main server executable for the Helios FHIR Server."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/HeliosSoftware/hfs/tree/main/crates/hfs"
readme = "README.md"

[features]
default = ["R4"]
R4 = ["helios-fhir/R4"]
R4B = ["helios-fhir/R4B"]
R5 = ["helios-fhir/R5"]
R6 = ["helios-fhir/R6"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
helios-fhir = { path = "../fhir", version = "0.1.30" }
