[package]
name = "pysof"
version = "0.1.0"
edition = "2021"
description = "Python bindings for helios-sof using PyO3"

# PyO3 extension metadata
[lib]
name = "pysof"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = ">=0.24.1", features = ["extension-module"] }
helios-sof = { path = "../sof", version = "0.1.16" }
helios-fhir = { path = "../fhir", version = "0.1.16" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pythonize = "0.24"
csv = "1.3"

[features]
default = ["R4"]
R4 = ["helios-sof/R4", "helios-fhir/R4"]
R4B = ["helios-sof/R4B", "helios-fhir/R4B"]
R5 = ["helios-sof/R5", "helios-fhir/R5"]
R6 = ["helios-sof/R6", "helios-fhir/R6"]

[build-dependencies]
pyo3-build-config = "0.24"
